--- a/app/artists.html
+++ b/app/artists.html
@@ -48,45 +48,106 @@
                   </div>
                 </form>
                 <div class="list-group">
-                  <a href="#" class="list-group-item active">
+                  <a href="#" class="list-group-item">
                     Songs
                   </a>
-                  <a href="#" class="list-group-item">Artists</a>
+                  <a href="#" class="list-group-item active">Artists</a>
                   <a href="#" class="list-group-item">Album</a>
                 </div>
               </aside>
             </div>
             <div class="col-xs-12 col-sm-9">
               <div id="main-content">
-                <h3>Songs</h3>
-                <div class="panel panel-primary">
-                  <table class="table">
-                      <thead>
-                        <tr>
-                          <th>#</th>
-                          <th>Track Name</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                      </tbody>
-                  </table>
-
+                <h3>Artists</h3>
+                <div class="row">
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-3">
+                    <div class="thumbnail">
+                      <img src="images/artist.jpeg" alt="Bob Marley">
+                      <div class="caption">
+                        <h5>Bob Marley</h5>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
 
