--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 
           <div class="row">
             <div class="col-xs-12 col-sm-3">
-              <aside>
+              <aside id="navigator">
                 <form role="search">
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
@@ -140,21 +140,13 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/backbone/backbone.js"></script>
     <script src="bower_components/bootsketch/build/js/vendors.min.js"></script>
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-
-        <!-- build:js({app,.tmp}) scripts/main.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({app,.tmp}) scripts/main.js -->
+    <script src="scripts/app.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
