--- a/app/index.html
+++ b/app/index.html
@@ -48,46 +48,17 @@
                   </div>
                 </form>
                 <div class="list-group">
-                  <a href="#/songs" class="list-group-item active">
+                  <a href="#/songs" ref="songs" class="list-group-item active">
                     Songs
                   </a>
-                  <a href="#/artists" class="list-group-item">Artists</a>
-                  <a href="#/album" class="list-group-item">Album</a>
+                  <a href="#/artists" ref="artists" class="list-group-item">Artists</a>
+                  <a href="#/albums" ref="albums" class="list-group-item">Albums</a>
                 </div>
               </aside>
             </div>
             <div class="col-xs-12 col-sm-9">
               <div id="main-content">
-                <h3>Songs</h3>
-                <div class="panel panel-primary">
-                  <table class="table">
-                      <thead>
-                        <tr>
-                          <th>#</th>
-                          <th>Track Name</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                        <tr>
-                          <td>1</td>
-                          <td>Asdmkasdm</td>
-                        </tr>
-                      </tbody>
-                  </table>
 
-                </div>
               </div>
 
             </div>
@@ -143,6 +114,221 @@
       </a>
     </script>
 
+    <script type="text/template" id="songs-view-tmpl">
+        <h3>Songs</h3>
+        <div class="panel panel-primary">
+          <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Track Name</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>Asdmkasdm</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Asdmkasdm</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Asdmkasdm</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Asdmkasdm</td>
+                </tr>
+              </tbody>
+          </table>
+        </div>
+    </script>
+
+    <script type="text/template" id="artists-view-tmpl">
+          <h3>Artists</h3>
+          <div class="row">
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/artist.jpeg" alt="Bob Marley">
+                <div class="caption">
+                  <h5>Bob Marley</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </script>
+
+    <script type="text/template" id="albums-view-tmpl">
+          <h3>Albums</h3>
+          <div class="row">
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+              <div class="thumbnail">
+                <img src="images/album.jpg" alt="Bloom">
+                <div class="caption">
+                  <h5>In Bloom</h5>
+                  <span>NSFW</span>
+                </div>
+              </div>
+            </div>
+
+          </div>
+    </script>
 
 
 
@@ -158,6 +344,10 @@
     <script>var MusicApp = {};</script>
     <script src="scripts/views/NavigatorView.js"></script>
     <script src="scripts/views/PlayerView.js"></script>
+    <script src="scripts/views/SongsView.js"></script>
+    <script src="scripts/views/ArtistsView.js"></script>
+    <script src="scripts/views/AlbumsView.js"></script>
+    <script src="scripts/routers/MainRouter.js"></script>
     <script src="scripts/app.js"></script>
     <!-- endbuild -->
 </body>
