--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header text-center">
-            <a class="navbar-brand text-center" href="#">My Backbone Music App</a>
+            <a class="navbar-brand text-center" href="/">My Backbone Music App</a>
           </div>
         </div><!-- /.container-fluid -->
       </nav>
